--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship | Erick B. Gomez</title>
   </head>
-  <body></body>
+  <body>
+    <div class="gameboards-container"></div>
+  </body>
 </html>
