--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title>Battleship | Erick B. Gomez</title>
   </head>
   <body>
+    <div class="timer">
+      <i class="material-symbols-outlined">timer</i>
+      <span class="value">00:00</span>
+    </div>
     <div class="gameboards-container"></div>
   </body>
 </html>
