--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,15 @@
     <title>Battleship | Erick B. Gomez</title>
   </head>
   <body>
-    <div class="timer">
-      <i class="material-symbols-outlined">timer</i>
-      <span class="value">00:00</span>
-    </div>
-    <div class="gameboards-container"></div>
+    <main>
+      <div class="timer">
+        <i class="material-symbols-outlined">timer</i>
+        <span class="value">00:00</span>
+      </div>
+      <div class="gameboards-container"></div>
+    </main>
+    <footer>
+      Made by <a href="https://github.com/ErickBGomez">Erick B. Gomez</a>
+    </footer>
   </body>
 </html>
